start migrating gens thru learn

--- a/todo
+++ b/todo
@@ -1,3 +1,8 @@
 move gens from number to dex.gens syntax
-make rmt linecounts rely on db instead of hardcode
-modify garbage collection (garbage.ts, guildDelete, channelDelete)
+check config dex
+check dex
+
+still broken:
+ccqueries
+dt
+learn
